--- a/package.json
+++ b/package.json
@@ -5,15 +5,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.11.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "axios": "^1.13.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.8.2",
+    "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.19",
@@ -44,9 +41,15 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@types/styled-components": "^5.1.34",
-    "typescript": "^5.9.2"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "redux-mock-store": "^1.5.5",
+    "typescript": "^4.9.5"
   }
 }
